--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ werkzeug==2.2.2; python_version >= '3.7'
 wtforms==3.0.1; python_version >= '3.7'
 zipp==3.17.0; python_version >= '3.8'
 boto3==1.26.101
+psycopg2-binary
